monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
  name: grafana
  namespace:
spec:
  rules:
  - host: grafana.pvarber.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: service
  tls:
  - hosts:
    - grafana.pvarber.com
    secretName: cloudflare-account-key
